# nipreps

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-test-deploy.yml
.maint/: make_gitignore
